Error display improvements
* MOPPIOS-797

--- a/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
@@ -31,9 +31,10 @@
 "mid-rest-error-no-response" = "Please check your internet connection";
 "mid-rest-error-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/index.php?id=39023";
 "mid-rest-error-exceeded-unsuccessful-requests" = "Failed to send request. The number of unsuccessful request from this IP address has been exceeded. Please try again later.";
-"mid-rest-error-invalid-access-rights" = "Failed to sign container. Check your Mobile-ID service access settings. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
 "mid-rest-error-ocsp-invalid-time-slot" = "Please check your smart device time. https://www.id.ee/en/article/ria-digidoc-error-please-check-your-smart-device-time/";
 "mid-rest-error-invalid-ssl-cert" = "SSL handshake failed. Check your application settings or software upgrades";
+"mid-rest-error-invalid-access-rights" = "Failed to sign container. Check your Mobile-ID service access settings. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
+"sid-rest-error-invalid-access-rights" = "Failed to sign container. Check your Smart-ID service access settings. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
 "sid-rest-error-wrong-vc" = "Error: an incorrect control code was chosen";
 "sid-rest-error-document-unusable" = "Your Smart-ID transaction has failed. Please check your Smart-ID application or contact Smart-ID customer support.";
 "sid-rest-error-not-qualified" = "Your Smart-ID certificate level must be qualified to sign documents in RIA DigiDoc mobile application.";
