Change container name
* MOPPIOS-50

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -110,6 +110,8 @@
 "container-details-file-already-exists" = "File already exists in the container";
 "container-header-files-title" = "Container files";
 "container-header-create-files-title" = "Container files";
+"container-edit-name-button" = "Edit container name";
+"container-error-message-failed-container-name-change" = "Failed to rename container";
 "container-header-create-addressee-title" = "Recipients";
 "container-header-timestamp-title" = "Container timestamps";
 "container-header-signatures-title" = "Container signatures";
