Better accessibility element names
* MOPPIOS-662

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -112,6 +112,7 @@
 "container-header-create-files-title" = "Container files";
 "container-edit-name-button" = "Edit container name";
 "container-error-message-failed-container-name-change" = "Failed to rename container";
+"container-header-files-add-file" = "Add file";
 "container-header-create-addressee-title" = "Recipients";
 "container-header-timestamp-title" = "Container timestamps";
 "container-header-signatures-title" = "Container signatures";
