--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -113,6 +113,7 @@
 "container-header-create-files-title" = "Ümbriku sisu";
 "container-edit-name-button" = "Muuda ümbriku nime";
 "container-error-message-failed-container-name-change" = "Ümbriku nime muutmine ebaõnnestus";
+"container-header-files-add-file" = "Lisa fail";
 "container-header-create-addressee-title" = "Adressaadid";
 "container-header-timestamp-title" = "Ajatempel";
 "container-header-signatures-title" = "Ümbriku allkirjad";
