--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -111,6 +111,7 @@
 "container-header-create-files-title" = "Файлы контейнера";
 "container-edit-name-button" = "Изменить название контейнера";
 "container-error-message-failed-container-name-change" = "Не удалось изменить название контейнера";
+"container-header-files-add-file" = "Добавить файл";
 "container-header-create-addressee-title" = "Получатели";
 "container-header-timestamp-title" = "Временной штамп контейнера";
 "container-header-signatures-title" = "Подписи контейнера";
