--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -135,6 +135,7 @@
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "Control code: %@";
+"challenge-code-label-accessibility" = "Control code: %@ %@ %@ %@";
 
 "sim-toolkit-sign-document-title" = "Sign document";
 
