Say control code with accessibility (#184)
* MOPPIOS-667

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -136,6 +136,7 @@
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "Control code: %@";
+"challenge-code-label-accessibility" = "Control code: %@ %@ %@ %@";
 
 "sim-toolkit-sign-document-title" = "Sign document";
 
