--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -137,6 +137,7 @@
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "Kontrollkood: %@";
+"challenge-code-label-accessibility" = "Kontrollkood: %@ %@ %@ %@";
 
 "sim-toolkit-sign-document-title" = "Allkirjasta dokument";
 
