Remove last file from container
* MOPPIOS-670

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -150,6 +150,7 @@
 
 "signature-remove-confirm-message" = "Soovid eemaldada allkirja?";
 "datafile-remove-confirm-message" = "Soovid eemaldada faili ümbrikust?";
+"last-datafile-remove-confirm-message" = "Oled kustutamas viimast faili ümbrikus, koos sellega eemaldatakse ka ümbrik";
 
 "mobile-id-title" = "Sisesta oma telefoninumber ja isikukood Mobiil-IDga allkirjastamiseks";
 "mobile-id-phone-title" = "Riigi suunakood ja mobiiltelefoni number";
