--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -129,7 +129,7 @@
 "container-signature-status-non-qscd" = "(Ограничения)";
 "container-signature-status-invalid" = "Подпись недействительна";
 "container-signature-status-unknown" = "Подпись неизвестная";
-"crypto-remove-addressee-button" = "Удалить Получателя";
+"crypto-remove-addressee-button" = "Удалить Подпись";
 "container-signature-test-signature-title" = "Тестовая подпись";
 "container-timestamp-invalid" = "Временной штамп недействителен";
 
