Changed Mobile-ID signing screen
* MOPPIOS-771

Signed-off-by: Marten Rebane marten.rebane@nortal.com

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -135,7 +135,7 @@
 
 // *** Mobile ID Challenge View ***
 
-"challenge-code-label" = "Control code: %@";
+"challenge-code-label" = "%@";
 "challenge-code-label-accessibility" = "Control code: %@ %@ %@ %@";
 
 "sim-toolkit-sign-document-title" = "Sign document";
