--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -297,5 +297,6 @@
 "last-update-check" = "ПОСЛЕДНЯЯ ПРОВЕРКА:";
 "update-date" = "ДАТА ОБНОВЛЕНИЯ:";
 "refresh-configuration" = "ПРОВЕРЬТЕ ОБНОВЛЕНИЯ";
+"refresh-configuration-restart-message" = "Обновление конфигурации и TSL прошло успешно. Перезапустите приложение для завершения обновления";
 "success-notification-dialog-label" = "Чтобы поделиться контейнером, нажмите кнопку «ПОДЕЛИТЬСЯ» и выберите нужное приложение. Все контейнеры можно найти в папке «Недавние документы» в настройках приложения.";
 "success-notification-dialog-dont-show-again" = "Больше не показывать";
