--- a/MoppLib/en.lproj/Localizable.strings
+++ b/MoppLib/en.lproj/Localizable.strings
@@ -78,5 +78,5 @@
 "digidoc-service-error-user-certificate-suspended" = "Your mobile signing certificate is suspended";
 "digidoc-service-error-user-certificate-expired" = "Your mobile signing certificate is expired";
 "digidoc-service-error-message-exceeds-volume-limit" = "Too many datafiles in container";
-"digidoc-service-error-message-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/index.php?id=39023";
+"digidoc-service-error-message-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
 "digidoc-service-error-simlutaneous-requests-limit-exceeded" = "Simultaneous requests limit exceeded";
