--- a/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "mid-rest-error-phone-absent" = "Phone is not in coverage area";
 "mid-rest-error-signature-hash-mismatch" = "Your Mobile-ID transaction has failed. Please contact your mobile network operator";
 "mid-rest-error-no-response" = "Please check your internet connection";
-"mid-rest-error-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/index.php?id=39023";
+"mid-rest-error-too-many-requests" = "The limit for digital signatures per month has been reached for this IP address. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
 "mid-rest-error-exceeded-unsuccessful-requests" = "Failed to send request. The number of unsuccessful request from this IP address has been exceeded. Please try again later.";
 "mid-rest-error-ocsp-invalid-time-slot" = "Please check your smart device time. https://www.id.ee/en/article/ria-digidoc-error-please-check-your-smart-device-time/";
 "mid-rest-error-invalid-ssl-cert" = "SSL handshake failed. Check your application settings or software upgrades";
@@ -41,6 +41,6 @@
 "sid-rest-error-old-api" = "RIA DigiDoc mobile application needs an upgrade. Please install new version from the mobile app store. Additional info is available ID-helpline (+372) 666 8888.";
 "sid-rest-error-under-maintenance" = "Smart-ID service has encountered technical errors. Please try again later.";
 "sid-rest-error-timeout" = "Your Smart-ID transaction has expired. Please try again.";
-"sid-rest-error-forbidden" = "Failed to sign container. Check your Smart-ID service access settings. https://www.id.ee/index.php?id=39023";
+"sid-rest-error-forbidden" = "Failed to sign container. Check your Smart-ID service access settings. https://www.id.ee/en/article/for-organisations-that-sign-large-quantities-of-documents-using-digidoc4-client/";
 "sid-rest-error-account-not-found" = "Account not found";
 "sid-rest-error-certificate-revoked" = "Certificate status revoked";
