--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -135,7 +135,7 @@
 
 // *** Mobile ID Challenge View ***
 
-"challenge-code-label" = "Контрольный код: %@";
+"challenge-code-label" = "%@";
 "challenge-code-label-accessibility" = "Контрольный код: %@ %@ %@ %@";
 
 // Currently must be in English
