--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -154,10 +154,10 @@
 "datafile-remove-confirm-message" = "Удалить файл из контейнера?";
 "last-datafile-remove-confirm-message" = "Вы собираетесь удалить последний файл в контейнере, он удаляется вместе с контейнером";
 
+"signing-remember-me" = "Запомни меня";
 "mobile-id-title" = "Введите свой телефонный номер и личный код для подписания с помощью Mobiil-ID";
 "mobile-id-phone-title" = "Код страны и телефонный номер";
 "mobile-id-idcode-title" = "Личный код";
-"mobile-id-remember-me" = "Запомни меня";
 "mobile-id-challenge-title" = "Подписать с помощью приложения Mobile-ID";
 "mobile-id-challenge-waiting-response" = "Жду ответа ...";
 "smart-id-title" = "Введите свой личный код для подписи с Smart-ID";
